# core

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.txt  Dockerfile  Doxyfile  README-docker.md  README.md  docker-compose.yml  sonar-project.properties
docker/: default_config.ini  dxpertsentry.sh
docs/: API.md  BUILD_UBUNTU.md  BUILD_WIN32.md  BUILD_WinDevEnv.md  Blockchain-Objects.md  Building-on-macOS.md  CLI-Wallet-Cookbook.md  Contribution-Guide.md  Custom-Authority-Precautions.md  Custom-Authority-Templates.md  Delayed-Node.md  ElasticSearch-Plugin.md  Git-Flow.md  HTLC-(CN).md  HTLC.md  HaProxy-and-Dxperts.md  Home.md  How-To-become-an-active-blockproducer-in-Dxperts-2.0.md  How-to-setup-your-blockproducer-for-test-net-(Ubuntu-14.04-LTS-64-bit).md  Howto-import-an-existing-delegate-as-blockproducer-in-Dxperts-2.0.md  Howto-propose-dxpcore-actions.md  Import-Dxperts-0.9.3c-wallets-into-Dxperts-2.0-CLI-wallet.md  Import-account-to-cli-wallet.md  Manage-your-nodes-by-using-gnu-screen.md  Memory-Reduction-for-Nodes.md  Monitoring-accounts.md  Node-Initialization.md  P2P-network-protocol.md  README-debug_node.md  SPV.md  Scripting-websockets-easy.md  StealthTransfers.md  Testing.md  (+22 more)
libraries/plugins/blockproducer/: CMakeLists.txt  blockproducer.cpp
libraries/plugins/blockproducer/include/graphene/blockproducer/: blockproducer.hpp
libraries/plugins/debug_blockproducer/: CMakeLists.txt  debug_api.cpp  debug_blockproducer.cpp
libraries/plugins/debug_blockproducer/include/graphene/debug_blockproducer/: debug_api.hpp  debug_blockproducer.hpp
(+416 files in other folders)
